# daktilo.nvim

./: CODE_OF_CONDUCT.adoc  Cargo.toml  README.adoc
.github/workflows/: ci.yml  dependabot.yml
src/: config.rs  lib.rs
