[package]
name = "daktilo_nvim"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.70.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
daktilo_server = { version = "0.5.0", git = "https://github.com/Xenira/daktilo.git", branch = "daktilo-server" }
nvim-oxi = { version = "0.5.1", features = ["libuv", "neovim-0-9"] }
prost = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
